Update QuickStart to use mvm:java and disambiguate
1. Disambiguation for Clusters & Projects
2. Use exec:java to use less memory.  Fixes issue on DevShell, not
releasing as there is a crash on exit
3. dataproc-wordcount/pom no longer needs to know a cluster name.